--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
+    "br-mask": "0.0.10",
     "fuzzy-search": "^3.2.1",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
