--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~11.2.0",
+    "@angular/cdk": "^11.2.1",
     "@angular/common": "~11.2.0",
     "@angular/core": "~11.2.0",
     "@angular/forms": "~11.2.0",
+    "@angular/material": "^11.2.1",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
+    "angular-imask": "^6.0.7",
     "fuzzy-search": "^3.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
